# rusc-project-bazel

./: .gitignore  README.md  WORKSPACE.bazel  build-application.sh
application/: BUILD  Cargo.toml
application/application-src/: main.c  rust_binder.c  rust_binder.h
application/mapping/: gpio-mapping.json
application/src/: lib.rs  rust_application.rs
application/src/abstraction/: gpio.rs  misc.rs
gpio/: Makefile  gpio_driver.c  gpio_driver.h
gpio/dt/: Makefile  gpio_overlay.dts
